[gd_scene load_steps=15 format=3 uid="uid://yu43duhtpdbj"]

[ext_resource type="Script" path="res://modules/character/character_ui.gd" id="1_k0rah"]
[ext_resource type="Texture2D" uid="uid://r1n4inbt3ouc" path="res://modules/character/peasants/assets/lumberjack.svg" id="2_3ioxj"]
[ext_resource type="AudioStream" uid="uid://cdgp50hwm0ahs" path="res://modules/character/assets/audio/sfx_peasant_death_torn_1.mp3" id="4_n8vf6"]
[ext_resource type="AudioStream" uid="uid://tlguti2mme82" path="res://modules/character/assets/audio/sfx_cursed_werewolf_kill_action.mp3" id="5_f5d5c"]
[ext_resource type="AudioStream" uid="uid://6vahmv2ttxee" path="res://modules/character/assets/audio/sfx_peasant_death_simple_1.mp3" id="7_t60di"]

[sub_resource type="Animation" id="Animation_cukwf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimRoot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_lhf4x"]
resource_name = "moving"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimRoot:rotation")
tracks/0/interp = 4
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3333, 0.6667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, -0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hf4yl"]
_data = {
"RESET": SubResource("Animation_cukwf"),
"moving": SubResource("Animation_lhf4x")
}

[sub_resource type="Animation" id="Animation_6dhei"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterUI/AnimRoot:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterUI/AnimRoot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_dgm0n"]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterUI/AnimRoot:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterUI/AnimRoot:rotation")
tracks/1/interp = 4
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -1.5708]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterUI")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_animation_die_red"
}]
}

[sub_resource type="Animation" id="Animation_d46b4"]
resource_name = "die_exorcist"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterUI/AnimRoot:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterUI")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_animation_die_red"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q6brh"]
_data = {
"RESET": SubResource("Animation_6dhei"),
"die": SubResource("Animation_dgm0n"),
"die_exorcist": SubResource("Animation_d46b4")
}

[sub_resource type="Animation" id="Animation_lpkys"]
resource_name = "kill"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tpr1n"]
_data = {
"kill": SubResource("Animation_lpkys")
}

[node name="CharacterUI" type="Node2D"]
script = ExtResource("1_k0rah")

[node name="AnimationPlayerMove" type="AnimationPlayer" parent="."]
autoplay = "moving"
libraries = {
"": SubResource("AnimationLibrary_hf4yl")
}

[node name="AnimationPlayerDie" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_q6brh")
}

[node name="AnimationPlayerKill" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_tpr1n")
}

[node name="AnimRoot" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="AnimRoot"]
position = Vector2(1, -15)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_3ioxj")

[node name="AudioStreamPlayer2DDyingExorcist" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_t60di")

[node name="AudioStreamPlayer2DDyingDefault" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_n8vf6")

[node name="AudioStreamPlayer2DKilling" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_f5d5c")
